[package]
name = "noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.27.0", default-features = false, features =["bitcoin_hashes","alloc","rand","rand-std"] }
rand = {version = "0.8.5", default-features = false, features = ["std","std_rng"] }
aes-gcm = "0.10.2"
chacha20poly1305 = "0.10.1"
rand_chacha = "0.3.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
